--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content"
                 >
-                    <h2 class="mb-5">Học vân</h2>
+                    <h2 class="mb-5">Học vấn</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Đại học Thuỷ Lợi</h3>
